UI: Fix recursion bug in scrollbars.less
(integrated from master branch change 9.2.1-1348-gab75d44 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/scrollbars.less
+++ b/src/chrome/komodo/skin/global/scrollbars.less
@@ -1,78 +1,3 @@
-/* Scrollbars */
-
 @import url("chrome://komodo/skin/global/colors.less");
 @import url("resource://profile/colors.less");
-
-page.widget[containerOrient="vertical"] scrollbar
-{
-    margin: 3px;
-    margin-left: -18px;
-}
-
-.autoscroll
-{
-    overflow: -moz-scrollbars-vertical;
-    overflow-y: scroll !important;
-}
-
-scrollbar
-{
-    -moz-appearance: none !important;
-    border: 0;
-    background: transparent;
-    opacity: 1.0 !important;
-    margin: 1px;
-    z-index: 999;
-    position: relative;
-    
-    &[orient="vertical"]
-    {
-        min-width: 15px;
-    }
-    
-    &[orient="horizontal"]
-    {
-        min-height: 15px;
-    }
-
-    slider
-    {
-        -moz-appearance: none !important;
-        border: 0;
-    }
-
-    thumb
-    {
-        -moz-appearance: none !important;
-        background: @contrast;
-        border: 0;
-    }
-}
-
-/* Modals */
-
-dialog, :root.dialog, :root.pref-window
-{
-    scrollbar thumb
-    {
-        background: @button;
-    }
-}
-
-#commando-panel
-{
-    scrollbar
-    {
-        margin-left: -16px;
-    }
-    
-    scrollbar thumb
-    {
-        background: @contrast-special;
-    }
-}
-
-:root.special scrollbar thumb
-{
-    background: @contrast-special;
-}
+@import url("chrome://komodo/skin/global/_scrollbars.less");
